[gd_scene load_steps=5 format=2]

[ext_resource path="res://ui/Settings.gd" type="Script" id=1]
[ext_resource path="res://ui/main_theme.tres" type="Theme" id=2]
[ext_resource path="res://ui/full.png" type="Texture" id=3]
[ext_resource path="res://ui/ButtonFullscreen.gd" type="Script" id=4]

[node name="Settings" type="Control"]
anchor_left = 0.02
anchor_top = 0.316
anchor_right = 0.33
anchor_bottom = 1.0
theme = ExtResource( 2 )
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/separation = -4
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="VBoxContainer"]
margin_right = 79.0
margin_bottom = 18.0
text = "Sound"

[node name="Sound" type="HSlider" parent="VBoxContainer"]
margin_top = 14.0
margin_right = 79.0
margin_bottom = 30.0
focus_mode = 0
max_value = 1.0
step = 0.05
value = 1.0

[node name="LabelNo" type="Label" parent="VBoxContainer"]
margin_top = 26.0
margin_right = 79.0
margin_bottom = 44.0

[node name="Label2" type="Label" parent="VBoxContainer"]
margin_top = 40.0
margin_right = 79.0
margin_bottom = 58.0
text = "Music"

[node name="Music" type="HSlider" parent="VBoxContainer"]
margin_top = 54.0
margin_right = 79.0
margin_bottom = 70.0
focus_mode = 0
max_value = 1.0
step = 0.05
value = 1.0

[node name="LabelNo2" type="Label" parent="VBoxContainer"]
margin_top = 66.0
margin_right = 79.0
margin_bottom = 84.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ButtonFullscreen" type="Button" parent="VBoxContainer"]
margin_top = 80.0
margin_right = 79.0
margin_bottom = 98.0
text = "Fullscreen"
icon = ExtResource( 3 )
align = 0
script = ExtResource( 4 )

[connection signal="value_changed" from="VBoxContainer/Sound" to="." method="_on_Sound_value_changed"]
[connection signal="value_changed" from="VBoxContainer/Music" to="." method="_on_Music_value_changed"]
[connection signal="button_down" from="VBoxContainer/ButtonFullscreen" to="VBoxContainer/ButtonFullscreen" method="_on_ButtonFullscreen_button_down"]
[connection signal="button_up" from="VBoxContainer/ButtonFullscreen" to="VBoxContainer/ButtonFullscreen" method="_on_ButtonFullscreen_button_up"]
[connection signal="mouse_entered" from="VBoxContainer/ButtonFullscreen" to="VBoxContainer/ButtonFullscreen" method="_on_ButtonFullscreen_mouse_entered"]
[connection signal="mouse_exited" from="VBoxContainer/ButtonFullscreen" to="VBoxContainer/ButtonFullscreen" method="_on_ButtonFullscreen_mouse_exited"]
[connection signal="pressed" from="VBoxContainer/ButtonFullscreen" to="." method="_on_ButtonFullscreen_pressed"]
